# QCDTau

./: #CMakeLists.txt#  #main.cpp#  .#CMakeLists.txt  .clang-complete  .gitignore  CMakeLists.txt  CMakeLists.txt~  GPATH  GRTAGS  GTAGS  README.md  main.cpp  main.cpp~
Src/: #experimental_moment.h#  .#experimental_moment.h  CMakeLists.txt  CMakeLists.txt~  Constants.h  Experiment.h  Numerics.h  Numerics.h~  Weights.h  chisquared.h  experimental_data.h  experimental_moment.h  theoretical_moment.h
Src/Frameworks/: #CMakeLists.txt#  CMakeLists.txt  CMakeLists.txt~
Src/Frameworks/ALEPH/: #aleph14_vpa.f90#  CMakeLists.txt  CMakeLists.txt~  aleph14_vpa.f90  num_const.f90
Src/Frameworks/CRunDec/: CMakeLists.txt  CMakeLists.txt~  CRunDec_ex.cc  CRunDec_ex20.cc  CRunDec_ex21.cc  README  example.cc
Src/Frameworks/NumericalRecipes/: CMakeLists.txt  nr3.h
Test/: #TestNumerics.cpp#  CMakeLists.txt  TestConstants.cpp  TestNumerics.cpp  chisquared_test.cpp  experimental_data_test.cpp  test.cpp  test_experimental_moment.cpp
src/: chisquared.cpp  constants.cpp  experimental_data.cpp  experimental_moment.cpp  theoretical_moment.cpp
test/: constants_test.cpp  experimental_moment_test.cpp  numerics_test.cpp  weights_test.cpp
